--- a/cart.css
+++ b/cart.css
@@ -142,14 +142,16 @@ img, .lf{
     text-align: center;
 }
 
-@media (max-width: 768px) {
-    /* .grid.text-center{
-        grid-template-columns: repeat(2, 1fr);
+/* @media (max-width: 768px) {
+    .fr{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 10px;
     }
-    .title_galeries{
-        text-align: center;
-    } */
-}
+} */
 @media (max-width: 426px) {
    .boxp{
     
@@ -181,6 +183,18 @@ img, .lf{
         justify-content: center;
        
     }
+    .fr{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin: 5px;
+    }
+    .form-floating{
+        margin: 5px;
+        width: 150px;
+    }
    
 }
 /* .grid.text-center:hover{
@@ -203,6 +217,27 @@ img, .projet{
 .projet:hover{
     background-color: #FCBF49;
 }
+
+
+.formulaire{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.form-floating{
+    margin: 5px;
+    width: 450px;
+}
+.fr{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 5px;
+}
+
 
 
 
